[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdjs-toolkit"
version = "0.0.4"
description = "Random little libraries that could be useful or could not be useful."
requires-python = ">=3.10"
authors = [
    { name = "TheDJStudios" },
    { name = "TheDJHimself" },
]
dependencies = [
]

[tool.setuptools.packages.find]
include = ["tdjs-toolkit*"]
